--- a/user-service.properties
+++ b/user-service.properties
@@ -1,4 +1,3 @@
-spring.application.name=user-service
 server.port=8081
 
 # Database Configuration
@@ -14,3 +13,7 @@ spring.jpa.show-sql=true
 eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.preferIpAddress=true
 
+springdoc.api-docs.path=/users/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.override-with-gateway-url=true
+gateway.url=http://localhost:9090
