--- a/product-service.properties
+++ b/product-service.properties
@@ -1,12 +1,19 @@
-spring.application.name=product-service
-server.port=8082
-eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
-eureka.instance.preferIpAddress=true
+server.port=8081
+
+# Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/cafe_users
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Hibernate Properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
+eureka.instance.preferIpAddress=true
+
+springdoc.api-docs.path=/users/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.override-with-gateway-url=true
+gateway.url=http://localhost:9090
