--- a/product-service.properties
+++ b/product-service.properties
@@ -1,19 +1,16 @@
-server.port=8081
-
-# Database Configuration
+server.port=8082
+eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
+eureka.instance.preferIpAddress=true
 spring.datasource.url=jdbc:mysql://localhost:3306/cafe_users
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate Properties
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
-eureka.instance.preferIpAddress=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-springdoc.api-docs.path=/users/v3/api-docs
+springdoc.api-docs.path=/products/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.override-with-gateway-url=true
 gateway.url=http://localhost:9090
