--- a/order-service.properties
+++ b/order-service.properties
@@ -1,4 +1,3 @@
-spring.application.name=order-service
 server.port=8083
 eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.preferIpAddress=true
@@ -8,3 +7,8 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+springdoc.api-docs.path=/orders/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.override-with-gateway-url=true
+gateway.url=http://localhost:9090
