--- a/payment-service.properties
+++ b/payment-service.properties
@@ -1,4 +1,3 @@
-spring.application.name=payment-service
 server.port=8084
 eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka/
 eureka.instance.preferIpAddress=true
@@ -9,3 +8,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+springdoc.api-docs.path=/payment/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.override-with-gateway-url=true
+gateway.url=http://localhost:9090
